--- a/Reactor.Web/Views/Shared/_Layout.cshtml
+++ b/Reactor.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,12 @@
     <title>@ViewData["Title"] - Reactor</title>
 </head>
 <body>
+<div class="img-overlay">
+    <div class="img-overlay__photo-box">
+        <img src="" class="img-overlay__photo"/>
+    </div>
+    <span class="img-overlay__close"> &times;</span>
+</div>
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container">
