--- a/Reactor.Web/Views/_ViewImports.cshtml
+++ b/Reactor.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Reactor.Web.Models.Account
 @using Reactor.Core.Domain.Posts
 @using Reactor.Services.Users
+@using Reactor.Web.Infrastructure.Helpers
+@using Reactor.Web.Models.Profile
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,Microsoft.AspNetCore.SpaServices
