--- a/Reactor.Web/Views/_ViewImports.cshtml
+++ b/Reactor.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,9 @@
 @using Reactor.Services.Users
 @using Reactor.Web.Infrastructure.Helpers
 @using Reactor.Web.Models.Profile
+@using Reactor.Services.Follows
+@using Reactor.Services.Posts
+@using Reactor.Core.Domain.Follows;
+
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,Microsoft.AspNetCore.SpaServices
