--- a/Reactor.Web/Views/Friend/List.cshtml
+++ b/Reactor.Web/Views/Friend/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.IEnumerable<Reactor.Core.Domain.Friends.Friend>
+﻿@model IEnumerable<Reactor.Core.Domain.Friends.Friend>
 
 @{
     ViewBag.Title = "title";
