--- a/Reactor.Web/Views/Home/Index.cshtml
+++ b/Reactor.Web/Views/Home/Index.cshtml
@@ -10,6 +10,9 @@
         <div class="row mt-2">
             <div class="col-md-3">
                 Col 1
+                <form asp-antiforgery="true" asp-controller="Account" asp-action="Logout">
+                    <button type="submit" class="btn btn-primary">Logout</button>
+                </form>
             </div>
             <div class="col-md-6">
                 <div class="status">
