--- a/Reactor.Web/Views/Shared/_Layout.cshtml
+++ b/Reactor.Web/Views/Shared/_Layout.cshtml
@@ -21,16 +21,12 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container">
-            <a href="#" class="navbar-brand">Reactor-Login as @User.Identity.Name</a>
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand">Reactor</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
 
                     <li class="nav-item">
-                        <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Messages</a>
+                        <a class="nav-link" asp-controller="Chat" asp-action="Index">Messages</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Friend" asp-action="List">
@@ -41,20 +37,21 @@
                         <a class="nav-link" asp-controller="Friend" asp-action="FriendRequests">
                             <i class="fa fa-users"></i> Friend Requests
                         </a>
-                    </li>
+                    `</li>
                     <li class="nav-item">
                         <a href="" class="nav-link">Notifications</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Settings</a>
+                        <a asp-controller="Profile" asp-action="Index" asp-route-username="@User.Identity.Name" class="nav-link">Welcome, @User.Identity.Name</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-</header>
+</header> 
 <main>
     @RenderBody()
+    
 </main>
 <footer>
 
